--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Asteroids</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/phaser.min.js"></script>
-        <script src="js/game.js"></script>        
-    </head>
-    <body>
-        <div id="gameDiv"> </div>
-    </body>
+<body>
+
+<a href="phaser_asteroids/index.html">
+Click to play Asteroids
+</a>
+
+<br>
+
+<a href="phaser_chinchin/index.html">
+Click to play Chin Chin
+</a>
+
+</body>
 </html>
