--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@ Click to play Asteroids
 Click to play Chin Chin
 </a>
 
+<br>
+
+<a href="phaser_fish/index.html">
+Click to play fish
+</a>
+
 </body>
 </html>
