--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@ Click to play Chin Chin
 Click to play fish
 </a>
 
+<a href="phaser_tiled/index.html">
+Click to play tiled
+</a>
+
 </body>
 </html>
