--- a/phaser_tiled/index.html
+++ b/phaser_tiled/index.html
@@ -9,7 +9,11 @@
         <script src="js/util.js"></script>
         <script src="js/player.js"></script>
         <script src="js/enemy.js"></script>
-        <script src="js/game.js"></script>
+        <script src="levels/main.js"></script>
+        <script src="levels/level1.js"></script>
+        <script src="levels/level2.js"></script>
+        <script src="levels/level3.js"></script>
+        <script src="levels/final.js"></script>
     </head>
     <body>
         <div id="gameDiv"></div>
