--- a/phaser_tiled/index.html
+++ b/phaser_tiled/index.html
@@ -4,7 +4,7 @@
         <title>phaser_tiled</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="lib/phaser.min.js"></script>
+        <script src="lib/phaser.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
         <script src="js/player.js"></script>
