--- a/phaser_tiled/index.html
+++ b/phaser_tiled/index.html
@@ -7,13 +7,11 @@
         <script src="lib/phaser.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
-        <script src="js/player.js"></script>
+        <script src="js/Player.js"></script>
         <script src="js/enemy.js"></script>
-        <script src="levels/main.js"></script>
-        <script src="levels/level1.js"></script>
-        <script src="levels/level2.js"></script>
-        <script src="levels/level3.js"></script>
-        <script src="levels/final.js"></script>
+        <script src="js/Level.js"></script>
+        <script src="states/main.js"></script>
+        <script src="states/final.js"></script>
     </head>
     <body>
         <div id="gameDiv"></div>
