--- a/phaser_tiled/index.html
+++ b/phaser_tiled/index.html
@@ -9,6 +9,7 @@
         <script src="js/util.js"></script>
         <script src="js/Sword.js"></script>
         <script src="js/Healthbar.js"></script>
+        <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/enemy.js"></script>
         <script src="js/Level.js"></script>
