--- a/phaser_tiled/index.html
+++ b/phaser_tiled/index.html
@@ -8,10 +8,13 @@
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
         <script src="js/Sword.js"></script>
+        <script src="js/Bow.js"></script>
+        <script src="js/Bomb.js"></script>
         <script src="js/Healthbar.js"></script>
+        <script src="js/Destructable.js"></script>
         <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
-        <script src="js/enemy.js"></script>
+        <script src="js/Skall.js"></script>
         <script src="js/Level.js"></script>
         <script src="states/main.js"></script>
         <script src="states/final.js"></script>
