--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Click to play Chin Chin
 
 <br>
 
-<a href="phaser_fish/index.html">
-Click to play fish
+<a href="hungry_fishy/index.html">
+Click to play Hungry Fishy
 </a>
 
 <br>
