--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ Click to play Asteroids
 
 <br>
 
-<a href="phaser_chinchin/index.html">
-Click to play Chin Chin
+<a href="chinchin/index.html">
+Click to play ChinChin
 </a>
 
 <br>
