--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+
+<head>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Welcome!</title>
+</head>
+
 <body>
-
-<a href="http://bjpicciano.github.io/chinchin">
-Click to play ChinChin
-</a>
-
-<br>
-
-<a href="http://bjpicciano.github.io/phaser_tiled">
-Click to play tiled
-</a>
-
+	<a href="./SocketIO_Chat/">Socket.io Chat</a> <br>
+	<a href="http://www.se.rit.edu/~bxp6666/ige/">Multiplayer Pirate Game</a> <br>
 </body>
+
 </html>
