--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-	<a href="./SocketIO_Chat/">Socket.io Chat</a> <br>
-	<a href="./phaser_tiled/">phaser_tiled</a> <br>
-	<a href="http://www.se.rit.edu/~bxp6666/ige/">Multiplayer Pirate Game</a> <br>
+	<a href="./SocketIO_Chat/">Socket.io Chat - A simple real time chat application using the power of Socket.io</a> <br>
+	<a href="./phaser_tiled/">Phaser_Tiled - A browser based action game made in Phaser</a> <br>
+	<a href="http://sprogs.io/">Sprogs.io - A multiplayer pirate sailing game</a> <br>
 </body>
 
 </html>
